feat: fix review findings